# ChangeLog for sci-geosciences/osmosis
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/osmosis/ChangeLog,v 1.2 2008/11/16 12:41:58 hanno Exp $

  16 Nov 2008; Hanno Boeck <hanno@gentoo.org> osmosis-0.29.ebuild:
  Add ~amd64.

*osmosis-0.29 (28 Jul 2008)

  28 Jul 2008; Hanno Boeck <hanno@gentoo.org> +osmosis-0.29.ebuild:
  Initial commit of osmosis, a tool to process openstreetmap data.
