@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST osmosis-0.29.tar.gz 2947422 RMD160 fded4c997bd2bc008ffda3367076fd8c85fa2f99 SHA1 5823ad1809d01f08d006388c943ba4ba99ca0883 SHA256 3619c72bc72c3a0e8d84d3cec7e31a3c418e871484ba1d310c980f6a486f2217
+DIST osmosis-0.30.tar.gz 3711955 RMD160 5e9b06f455b920c75900a5e6dd1d3eb1588380b0 SHA1 ea169086b37aeac6bdee762a3c8187b430551596 SHA256 40985cf8b809b38bd95fefc63a483e1f6f13f881e253c2f47290fce0fffb6158
 EBUILD osmosis-0.29.ebuild 851 RMD160 c9be3ceb2c5b88ae63f3db9620bfd443dd261006 SHA1 776c2a44fc3d58b59828630468b70793e8ea61e5 SHA256 2437fd04d003623459008972fc896db831ced085ab08b0a3dcaacc9dcf8f6441
-MISC ChangeLog 465 RMD160 26398ab6c80f62f31cf349328f3773b301fb3866 SHA1 1a433734d7fcf01de67d7e18556843533dbb706d SHA256 0ffc8e4d25359d2867ae01d54e787ff595684758f1782cfa5deeb690b2f7886b
+EBUILD osmosis-0.30.ebuild 851 RMD160 625cebf781f523c645641368685db4dc39cec25a SHA1 39aabc367806d967140ea035a6d30f1415965165 SHA256 9379f625f8f4f8dbe61beedd952d2a96a31f694b8a387b98040e941d4f63996c
+MISC ChangeLog 579 RMD160 45a81f099487aa03e92039cef96407bb63cd51e8 SHA1 2c5211bf77f3937a49133eefc5bc3c1a4ec30e24 SHA256 56100a03472014d49f11f38ef2b5781fe69882a318502225055edfee04dfd98f
 MISC metadata.xml 237 RMD160 20944f06e761a57587043f3ec7ec969a5ab9bdcc SHA1 33b0366a9efeb0caad5712fb7e628147dff924be SHA256 29eb01e164be9510d6a51d6477c169df641127a2a2df064c9d99c90c067ac3d7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.10 (GNU/Linux)
 
-iEYEARECAAYFAkkgFRAACgkQr2QksT29OyCZIgCfSropeEWpqq8Kvo5rX6HFEyOM
-rxUAn3ZZV4eVDpD55dHPTGjY/y5lX+ET
-=mj2+
+iEYEARECAAYFAkm7qn0ACgkQr2QksT29OyA6NgCgmn1YREratcXMA2Ex0srjTNEv
+G/YAnj0K4bf833B4I8YfQCZB9hhLFnpd
+=J5Wk
 -----END PGP SIGNATURE-----
