@@ -1,6 +1,11 @@
 # ChangeLog for sci-geosciences/osmosis
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/osmosis/ChangeLog,v 1.2 2008/11/16 12:41:58 hanno Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/osmosis/ChangeLog,v 1.3 2009/03/14 13:00:38 hanno Exp $
+
+*osmosis-0.30 (14 Mar 2009)
+
+  14 Mar 2009; Hanno Boeck <hanno@gentoo.org> +osmosis-0.30.ebuild:
+  Version bump.
 
   16 Nov 2008; Hanno Boeck <hanno@gentoo.org> osmosis-0.29.ebuild:
   Add ~amd64.
